fix(homepage): news button misaligned

--- a/style/home.css
+++ b/style/home.css
@@ -275,7 +275,7 @@
     position: absolute;
     margin-top: 0;
     top: 80px;
-    right: 32px;
+    right: 0;
   }
   
   .home-page main .news-box > .content,
